# connection-examples

./: .gitignore  README.md
.github/workflows/: check-links.yml  licensing.yml  link-checking.yml  links.yml  verify-licenses.yml
c/: Makefile  README.md  conanfile.txt  mysql.c
c#/: Program.cs  README.md  c#.csproj
c/doc/: dependency_decisions.yml
elixir/: README.md
elixir/example/: .gitignore  README.md  connect.exs  mix.exs
elixir/example/doc/: dependency_decisions.yml
go/: README.md  example.go  go.mod
go/doc/: dependency_decisions.yml
java/: README.md  pom.xml
java/doc/: dependency_decisions.yml
java/src/main/java/com/planetscale/example/: mysql.java
mysql/: README.md
nodejs/: README.md  mysql.js  package.json
nodejs/doc/: dependency_decisions.yml
nodejs/prisma/: README.md  schema.prisma
nodejs/typeorm/: data-source.ts
php/: README.md  mysqli.php  pdo.php
python/: README.md  mysql-connector-python.py  mysql.py
python/django/: README.md  my.cnf  settings.py
python/doc/: dependency_decisions.yml
ruby/: Gemfile  README.md  mysql.rb
ruby/doc/: dependency_decisions.yml
ruby/rails/: README.md  database.yml
rust/: README.md
rust/mysql/: Cargo.toml  README.md
rust/mysql-async/: Cargo.toml  README.md
rust/mysql-async/doc/: dependency_decisions.yml
rust/mysql-async/src/: main.rs
rust/mysql/doc/: dependency_decisions.yml
rust/mysql/src/: main.rs
rust/sqlx/: Cargo.toml  README.md
rust/sqlx/doc/: dependency_decisions.yml
rust/sqlx/src/: main.rs
