[package]
name = "sqlx-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.5", features = [ "mysql", "runtime-async-std-native-tls" ] }
async-std = { version = "1.9", features = [ "attributes" ] }
